@@ -53,26 +53,18 @@ void fostlib::log::log(const fostlib::log::message &m) {
 
 
 /*
-    fostlib::log::log_dsl
+    fostlib::log::log_object
 */
 
 
-fostlib::log::detail::log_dsl::log_dsl(std::size_t level, fostlib::nliteral name)
+fostlib::log::detail::log_object::log_object(std::size_t level, fostlib::nliteral name)
 : level(level), name(name) {
 }
 
 
-fostlib::log::detail::log_dsl::~log_dsl()
+fostlib::log::detail::log_object::~log_object()
 try {
-    fostlib::log::log(level, name, log_data);
+    fostlib::log::log(level, name, log_message);
 } catch ( ... ) {
     absorbException();
-}
-
-
-fostlib::log::detail::log_dsl &fostlib::log::detail::log_dsl::operator < (
-    const fostlib::string &s
-) {
-    key = s;
-    return *this;
 }
